# ESW_effective_servers

./: README.md
epoll_server/: CMakeLists.txt  Makefile  connection.cpp  connection.h  epolltcp.cpp  epolltcp.h  main.cpp  readme.txt  schema.pb.cc  schema.pb.h
java_server/: pom.xml  readme.txt
java_server/src/main/java/server/: AppServer.java  ReqDecoder.java  ResEncoder.java  ServerInitializer.java  ServerProtoHandler.java
